# ndastro-ui

./: .gitignore  .pylintrc  README.md  config.py  config.yaml  pyproject.toml  requirements.txt  resources.py  resources.qrc
ndastro/: app_container.py  main.py
ndastro/core/: core_container.py
ndastro/core/database/: connection.py  models.py
ndastro/core/services/: base_service.py  dasha_service.py  kattam_service.py  ndastro_service.py
ndastro/core/settings/: instance.py  manager.py
ndastro/gui/: gui_container.py  ndastro.py
ndastro/gui/models/: dasha.py  dasha_detail.py  kattam.py  ndastro_model.py  planet_position.py
ndastro/gui/viewmodels/: ndastro_viewmodel.py  ndastro_vm.py  settings_vm.py
ndastro/gui/views/: ndastro_ui.py
ndastro/gui/views/controls/: hoverable_text.py
ndastro/gui/views/controls/dialogs/: backdrop.py  base_dialog_content.py  frameless_modal.py
ndastro/gui/views/dialogs/: settings.py
ndastro/gui/views/widgets/: resizable_chart.py  settings.py
ndastro/gui/views/widgets/setting_sections/: appearance_section.py  genenral_section.py
ndastro/libs/: ayanamsa.py  constants.py  custom_errors.py  custom_popup.py  dasha_systems.py  errors.py  house_enum.py  hoverable_text.py  nakshatra_enum.py  planet_enum.py  planets.py  rasi_enum.py  rasis.py  resizable_chart.py  retrograde.py  south_chart.py  star_enum.py  utils.py
ndastro/locales/: core.en.json  core.ta.json
ndastro/resources/: core.qss
ndastro/resources/locales/: common.en.json  common.ta.json  core.en.json  core.ta.json
ndastro/types/: common.py
tests/: conftest.py  test_ayanamsa.py  test_dasha_systems.py  test_rasi.py  test_retrograde.py  test_utils.py
